Table and buttons were added with js functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <h1>Hello All</h1>
 
     <button>greet</button>
+    <table>
+      <thead>
+        <th data-thead="id" scope="col">ID</th>
+        <th data-thead="name" scope="col">name</th>
+        <th data-thead="age" scope="col">age</th>
+      </thead>
+      <tr class="trow">
+        <th data-tcell-id scope="row"></th>
+        <th data-tcell-name scope="row"></th>
+        <th data-tcell-age scope="row"></th>
+      </tr>
+      <tr class="trow">
+        <th data-tcell-id scope="row"></th>
+        <th data-tcell-name scope="row"></th>
+        <th data-tcell-age scope="row"></th>
+      </tr>
+      <tr class="trow">
+        <th data-tcell-id scope="row"></th>
+        <th data-tcell-name scope="row"></th>
+        <th data-tcell-age scope="row"></th>
+      </tr>
+    </table>
+
+    <div class="btns-group">
+      <button data-id-btn>get IDs</button>
+      <button data-name-btn>get names</button>
+      <button data-age-btn>get ages</button>
+      <button data-reset-btn>Reset</button>
+    </div>
     <script src="js/script.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
