--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </tr>
     </table>
 
-    <div class="btns-group">
+    <div class="btns-group" id="div1">
       <button data-id-btn>get IDs</button>
       <button data-name-btn>get names</button>
       <button data-age-btn>get ages</button>
