--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <th data-thead="age" scope="col">age</th>
       </thead>
       <tr class="trow">
-        <th data-tcell-id scope="row"></th>
+        <th data-tcell-id="userid" scope="row"></th>
         <th data-tcell-name scope="row"></th>
         <th data-tcell-age scope="row"></th>
       </tr>
